--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--give standard meta tags -->
+    <meta charset= utf-8>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colored Markers</title>
 </head>
 
