--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>CSS Color Markers</h1>
+    <!--created container for the markers  -->
     <div class="container">
+        <!--created class element marker    -->
         <div class="marker"></div>
         </div>
         
