index and style sheet update
Index- created multiple classes in the class element.

Style- removed the background color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--created container for the markers  -->
     <div class="container">
         <!--created class element marker    -->
+        <!--created multiple classes-->
+        <div class="marker one"></div>
+        <div class="marker"></div>
         <div class="marker"></div>
         </div>
         
