--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!--created container for the markers  -->
     <div class="container">
         <!--created class element marker    -->
-        <!--created multiple classes-->
+        <!--created multiple classes numbered-->
         <div class="marker one"></div>
-        <div class="marker"></div>
-        <div class="marker"></div>
+        <div class="marker two"></div>
+        <div class="marker three"></div>
         </div>
         
 </body>
