update CSS and HTML
-added the div class sleeve

-notated the various ways to add color and examples of how to use color stops and color gradients depending on how color is added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <div class="container">
         <!--created class element marker    -->
         <!--created multiple classes numbered-->
-        <div class="marker red"></div>
-        <div class="marker green"></div>
-        <div class="marker blue"></div>
+        <div class="marker red">
+            <div class="sleeve"></div>
+        </div>
+        <div class="marker green">
+            <div class="sleeve"></div>
+        </div>
+        <div class="marker blue">
+            <div class="sleeve"></div>
+        </div>
         </div>
         
 </body>
